refactor test to use Security