@@ -8,7 +8,9 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
@@ -18,10 +20,14 @@ import org.zeros.farm_manager_server.Controllers.Data.FertilizerController;
 import org.zeros.farm_manager_server.Domain.DTO.Data.FertilizerDTO;
 import org.zeros.farm_manager_server.Domain.Entities.Data.Fertilizer;
 import org.zeros.farm_manager_server.Domain.Mappers.DefaultMappers;
+import org.zeros.farm_manager_server.IntegrationTests.JWT_Authentication;
+import org.zeros.farm_manager_server.Repositories.Data.FertilizerRepository;
 import org.zeros.farm_manager_server.Services.Interface.Data.FertilizerManager;
 import org.zeros.farm_manager_server.Services.Interface.User.UserManager;
 
 import java.io.UnsupportedEncodingException;
+import java.math.BigDecimal;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -44,18 +50,21 @@ public class FertilizerControllerTest {
     @Autowired
     WebApplicationContext wac;
     MockMvc mockMvc;
+    @Autowired
+    private FertilizerRepository fertilizerRepository;
 
     @BeforeEach
     void setUp() {
-        mockMvc = MockMvcBuilders.webAppContextSetup(wac).build();
-        userManager.logInNewUserByUsernameAndPassword("DEMO_USER", "DEMO_PASSWORD");
+        mockMvc = MockMvcBuilders.webAppContextSetup(wac)
+                .apply(SecurityMockMvcConfigurers.springSecurity()).build();
     }
 
     @Test
     void getById() throws Exception {
-        Fertilizer fertilizer = fertilizerManager.getAllFertilizers(0).getContent().get(1);
+        Fertilizer fertilizer = findDefaultFertilizer();
         MvcResult result = mockMvc.perform(
                         get(FertilizerController.ID_PATH,fertilizer.getId())
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -70,6 +79,7 @@ public class FertilizerControllerTest {
     void getByIdNotFound() throws Exception {
         mockMvc.perform(
                         get(FertilizerController.ID_PATH,UUID.randomUUID())
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
 
@@ -80,6 +90,7 @@ public class FertilizerControllerTest {
     void getAll() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(FertilizerController.LIST_ALL_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -92,6 +103,7 @@ public class FertilizerControllerTest {
     void getDefault() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(FertilizerController.LIST_DEFAULT_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -104,6 +116,7 @@ public class FertilizerControllerTest {
     void getUserCreated() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(FertilizerController.LIST_USER_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -115,9 +128,10 @@ public class FertilizerControllerTest {
 
     @Test
     void getByNameAs() throws Exception {
-        Fertilizer fertilizer = fertilizerManager.getAllFertilizers(0).getContent().get(1);
+        Fertilizer fertilizer = findDefaultFertilizer();
         MvcResult result = mockMvc.perform(
                         get(FertilizerController.LIST_PARAM_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .param("name", fertilizer.getName().substring(0, 3))
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -132,6 +146,7 @@ public class FertilizerControllerTest {
     void getNaturalFertilizer() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(FertilizerController.LIST_PARAM_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .param("isNatural", String.valueOf(true))
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -150,11 +165,12 @@ public class FertilizerControllerTest {
                 .producer("TEST32")
                 .name("TEST32")
                 .isNaturalFertilizer(true)
-                .totalCaPercent(30)
-                .totalMgPercent(10)
+                .totalCaPercent(BigDecimal.valueOf(30))
+                .totalMgPercent(BigDecimal.valueOf(10))
                 .build();
 
         MvcResult result = mockMvc.perform(post(FertilizerController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(fertilizerDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -165,7 +181,7 @@ public class FertilizerControllerTest {
         assertThat(result.getResponse().getHeaders("Location")).isNotNull();
 
         String[] locationUUID = result.getResponse().getHeaders("Location")
-                .get(0).split("/");
+                .getFirst().split("/");
         UUID savedUUID = UUID.fromString(locationUUID[4]);
 
         assertThat(fertilizerManager.getFertilizerById(savedUUID).equals(Fertilizer.NONE)).isFalse();
@@ -176,10 +192,10 @@ public class FertilizerControllerTest {
     @Transactional
     void addNewErrorAlreadyExists() throws Exception {
 
-
         FertilizerDTO FertilizerDTO = DefaultMappers.fertilizerMapper.entityToDto(
-                fertilizerManager.getAllFertilizers(0).getContent().get(2));
+               findDefaultFertilizer());
         mockMvc.perform(post(FarmingMachineController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(FertilizerDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -193,11 +209,12 @@ public class FertilizerControllerTest {
         FertilizerDTO fertilizerDTO = FertilizerDTO.builder()
                 .producer("TEST")
                 .name("TEST")
-                .totalNPercent(10)
-                .totalPPercent(30)
+                .totalNPercent(BigDecimal.valueOf(10))
+                .totalPPercent(BigDecimal.valueOf(30))
                 .build();
 
         mockMvc.perform(post(FarmingMachineController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(fertilizerDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -210,11 +227,11 @@ public class FertilizerControllerTest {
     @Transactional
     void update() throws Exception {
         Fertilizer fertilizer = addNewFertilizer();
-
         FertilizerDTO fertilizerDTO = DefaultMappers.fertilizerMapper.entityToDto(fertilizer);
         fertilizerDTO.setName("TEST_UPDATED");
-        fertilizerDTO.setTotalCaPercent(10);
+        fertilizerDTO.setTotalCaPercent(BigDecimal.valueOf(10));
         mockMvc.perform(patch(FertilizerController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(fertilizerDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -226,23 +243,40 @@ public class FertilizerControllerTest {
         assertThat(fertilizerManager.getFertilizerById(fertilizer.getId()).getTotalCaPercent().floatValue()).isEqualTo(10);
     }
 
-    private Fertilizer addNewFertilizer() {
-        return fertilizerManager.addFertilizer(FertilizerDTO.builder()
+    private Fertilizer addNewFertilizer() throws Exception {
+        FertilizerDTO fertilizerDTO = FertilizerDTO.builder()
                 .producer("TEST")
-                .name("Test")
-                .isNaturalFertilizer(false)
-                .totalNPercent(10)
-                .totalKPercent(30)
-                .build());
+                .name("TEST")
+                .isNaturalFertilizer(true)
+                .totalCaPercent(BigDecimal.valueOf(30))
+                .totalMgPercent(BigDecimal.valueOf(10))
+                .build();
+
+        MvcResult result = mockMvc.perform(post(FertilizerController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(fertilizerDTO))
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isCreated())
+                .andReturn();
+
+        assertThat(result.getResponse().getHeaders("Location")).isNotNull();
+
+        String[] locationUUID = result.getResponse().getHeaders("Location")
+                .getFirst().split("/");
+        UUID savedUUID = UUID.fromString(locationUUID[4]);
+        return fertilizerManager.getFertilizerById(savedUUID);
     }
 
     @Test
     @Transactional
     void updateAccessDenied() throws Exception {
         FertilizerDTO fertilizerDTO = DefaultMappers.fertilizerMapper.entityToDto(
-                fertilizerManager.getDefaultFertilizers(0).getContent().get(2));
+                findDefaultFertilizer());
         fertilizerDTO.setName("TEST_UPDATED");
         mockMvc.perform(patch(FertilizerController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(fertilizerDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -257,6 +291,7 @@ public class FertilizerControllerTest {
         FertilizerDTO FertilizerDTO = DefaultMappers.fertilizerMapper.entityToDto(fertilizer);
         FertilizerDTO.setName("");
         mockMvc.perform(patch(FertilizerController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(FertilizerDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -270,6 +305,7 @@ public class FertilizerControllerTest {
         Fertilizer fertilizer = addNewFertilizer();
 
         mockMvc.perform(delete(FertilizerController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .param("id", fertilizer.getId().toString())
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON))
@@ -280,10 +316,10 @@ public class FertilizerControllerTest {
 
     @Test
     void deleteFailed() throws Exception {
-        Fertilizer fertilizer = fertilizerManager
-                .getAllFertilizers(0).getContent().get(0);
+        Fertilizer fertilizer = findDefaultFertilizer();
 
         mockMvc.perform(delete(FertilizerController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .param("id", fertilizer.getId().toString())
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON))
@@ -291,6 +327,10 @@ public class FertilizerControllerTest {
                 .andExpect(status().isMethodNotAllowed());
         assertThat(fertilizerManager.getFertilizerById(fertilizer.getId()).equals(Fertilizer.NONE)).isFalse();
 
+    }
+
+    private Fertilizer findDefaultFertilizer() {
+        return fertilizerRepository.findAllByCreatedByIn(Set.of("ADMIN"), PageRequest.of(0,2)).getContent().getFirst();
     }
 
 
