@@ -9,6 +9,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
@@ -19,6 +20,7 @@ import org.zeros.farm_manager_server.Domain.DTO.Data.SprayDTO;
 import org.zeros.farm_manager_server.Domain.Entities.Data.Spray;
 import org.zeros.farm_manager_server.Domain.Enum.SprayType;
 import org.zeros.farm_manager_server.Domain.Mappers.DefaultMappers;
+import org.zeros.farm_manager_server.IntegrationTests.JWT_Authentication;
 import org.zeros.farm_manager_server.Services.Interface.Data.SprayManager;
 import org.zeros.farm_manager_server.Services.Interface.User.UserManager;
 
@@ -51,15 +53,16 @@ public class SprayControllerTest {
 
     @BeforeEach
     void setUp() {
-        mockMvc = MockMvcBuilders.webAppContextSetup(wac).build();
-        userManager.logInNewUserByUsernameAndPassword("DEMO_USER", "DEMO_PASSWORD");
+        mockMvc = MockMvcBuilders.webAppContextSetup(wac)
+                .apply(SecurityMockMvcConfigurers.springSecurity()).build();
     }
 
     @Test
     void getById() throws Exception {
-        Spray spray = sprayManager.getAllSprays(0).getContent().get(1);
+        Spray spray = findDefaultSpray();
         MvcResult result = mockMvc.perform(
                         get(SprayController.ID_PATH,spray.getId())
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -74,6 +77,7 @@ public class SprayControllerTest {
     void getByIdNotFound() throws Exception {
         mockMvc.perform(
                         get(SprayController.ID_PATH,UUID.randomUUID())
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
 
@@ -84,6 +88,7 @@ public class SprayControllerTest {
     void getAll() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(SprayController.LIST_ALL_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -96,6 +101,7 @@ public class SprayControllerTest {
     void getDefault() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(SprayController.LIST_DEFAULT_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -108,6 +114,7 @@ public class SprayControllerTest {
     void getUserCreated() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(SprayController.LIST_USER_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -119,9 +126,10 @@ public class SprayControllerTest {
 
     @Test
     void getByNameAs() throws Exception {
-        Spray spray = sprayManager.getAllSprays(0).getContent().get(1);
+        Spray spray = findDefaultSpray();
         MvcResult result = mockMvc.perform(
                         get(SprayController.LIST_PARAM_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .param("name", spray.getName().substring(0,3))
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -136,6 +144,7 @@ public class SprayControllerTest {
     void getBySprayType() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(SprayController.LIST_PARAM_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .param("sprayType", SprayType.INSECTICIDE.toString())
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -150,6 +159,7 @@ public class SprayControllerTest {
     void getByActiveSubstance() throws Exception {
         MvcResult result = mockMvc.perform(
                         get(SprayController.LIST_PARAM_PATH)
+                                .with(JWT_Authentication.jwtRequestPostProcessor)
                                 .param("activeSubstance", "X1")
                                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -170,6 +180,7 @@ public class SprayControllerTest {
                 .build();
 
         MvcResult result = mockMvc.perform(post(SprayController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sprayDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -180,7 +191,7 @@ public class SprayControllerTest {
         assertThat(result.getResponse().getHeaders("Location")).isNotNull();
 
         String[] locationUUID = result.getResponse().getHeaders("Location")
-                .get(0).split("/");
+                .getFirst().split("/");
         UUID savedUUID = UUID.fromString(locationUUID[4]);
 
         assertThat(sprayManager.getSprayById(savedUUID).equals(Spray.NONE)).isFalse();
@@ -193,8 +204,9 @@ public class SprayControllerTest {
 
 
         SprayDTO sprayDTO = DefaultMappers.sprayMapper.entityToDto(
-                sprayManager.getAllSprays(0).getContent().get(2));
+                findDefaultSpray());
         mockMvc.perform(post(FarmingMachineController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sprayDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -208,10 +220,10 @@ public class SprayControllerTest {
         SprayDTO sprayDTO = SprayDTO.builder()
                 .activeSubstances(Set.of("X1"))
                 .producer("TEST")
-                .name("TEST")
                 .build();
 
         mockMvc.perform(post(FarmingMachineController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sprayDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -229,6 +241,7 @@ public class SprayControllerTest {
         sprayDTO.setDescription(null);
         sprayDTO.getActiveSubstances().add("X2");
         mockMvc.perform(patch(SprayController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sprayDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -241,23 +254,39 @@ public class SprayControllerTest {
                 .contains("X2");
     }
 
-    private Spray saveNewSpray() {
-
-        return sprayManager.addSpray(SprayDTO.builder()
-                .activeSubstances(Set.of("X1","X2","X3"))
-                        .sprayType(SprayType.HERBICIDE)
+    private Spray saveNewSpray() throws Exception {
+        SprayDTO sprayDTO = SprayDTO.builder()
+                .activeSubstances(Set.of("X1"))
                 .producer("TEST")
                 .name("TEST")
-                .build());
+                .sprayType(SprayType.HERBICIDE)
+                .build();
+
+        MvcResult result = mockMvc.perform(post(SprayController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(sprayDTO))
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isCreated())
+                .andReturn();
+
+        assertThat(result.getResponse().getHeaders("Location")).isNotNull();
+
+        String[] locationUUID = result.getResponse().getHeaders("Location")
+                .getFirst().split("/");
+        UUID savedUUID = UUID.fromString(locationUUID[4]);
+        return sprayManager.getSprayById(savedUUID);
     }
 
     @Test
     @Transactional
     void updateAccessDenied() throws Exception {
         SprayDTO sprayDTO = DefaultMappers.sprayMapper.entityToDto(
-                sprayManager.getDefaultSprays(0).getContent().get(2));
+              findDefaultSpray());
         sprayDTO.setName("TEST_UPDATED");
         mockMvc.perform(patch(SprayController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sprayDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -272,6 +301,7 @@ public class SprayControllerTest {
         SprayDTO sprayDTO = DefaultMappers.sprayMapper.entityToDto(spray);
         sprayDTO.setName("");
         mockMvc.perform(patch(SprayController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sprayDTO))
                         .accept(MediaType.APPLICATION_JSON))
@@ -283,8 +313,8 @@ public class SprayControllerTest {
     @Transactional
     void deleteSpray() throws Exception {
         Spray spray = saveNewSpray();
-
         mockMvc.perform(delete(SprayController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .param("id", spray.getId().toString())
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON))
@@ -295,10 +325,10 @@ public class SprayControllerTest {
 
     @Test
     void deleteFailed() throws Exception {
-        Spray spray = sprayManager
-                .getAllSprays(0).getContent().get(0);
+        Spray spray = findDefaultSpray();
 
         mockMvc.perform(delete(SprayController.BASE_PATH)
+                        .with(JWT_Authentication.jwtRequestPostProcessor)
                         .param("id", spray.getId().toString())
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON))
@@ -306,6 +336,10 @@ public class SprayControllerTest {
                 .andExpect(status().isMethodNotAllowed());
         assertThat(sprayManager.getSprayById(spray.getId()).equals(Spray.NONE)).isFalse();
 
+    }
+
+    private Spray findDefaultSpray() {
+        return sprayManager.getDefaultSprays(0).getContent().getFirst();
     }
 
 
